--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>minha assinatura</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="principal">
     <h1 class="titulo-principal">Com o combo+, você pode aproveiar a Alura+ por um preço único</h1>
-
+    <img src="img/Combo.png" alt="">
+</section>
 </body>
 </html>
