--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="principal">
+    <section class="principal container">
     <h1 class="titulo-principal">Com o combo+, você pode aproveiar a Alura+ por um preço único</h1>
     <img src="img/Combo.png" alt="">
+    <a href="http://curso.alura.com.br/formacao-programacao" class="conteiner_botao"></a>
 </section>
 </body>
 </html>
