--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <section class="principal container">
     <h1 class="titulo-principal">Com o combo+, você pode aproveiar a Alura+ por um preço único</h1>
     <img src="img/Combo.png" alt="">
-    <a href="http://curso.alura.com.br/formacao-programacao" class="container_botao"></a>
+    <a href="http://curso.alura.com.br/formacao-programacao" class="container__botao">
+        Assine por 10x de R$150
+    </a>
+    <a href="http://curso.alura.com.br/formacao-programacao" class="container__botao botao__secundario"> Assinar somente o Alura+</a>
 </section>
 </body>
 </html>
