--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
     <section class="principal container">
     <h1 class="titulo-principal">Com o combo+, você pode aproveiar a Alura+ por um preço único</h1>
-    <img src="img/Combo.png" alt="">
+    <img src="img/Combo.png" alt="" class="container__imagem">
     <a href="http://curso.alura.com.br/formacao-programacao" class="container__botao">
         Assine por 10x de R$150
     </a>
     <a href="http://curso.alura.com.br/formacao-programacao" class="container__botao botao__secundario"> Assinar somente o Alura+</a>
+    <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outro planos</p>
 </section>
 </body>
 </html>
