--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-bt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>minha assinatura</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="principal container">
         <div class="container__caixa">
-    <h1 class="titulo-principal">Com o combo+, você pode aproveiar a Alura+ por um preço único</h1>
-    <img src="img/Combo.png" alt="" class="container__imagem">
-    <a href="http://curso.alura.com.br/formacao-programacao" class="container__botao">
-        Assine por 10x de R$150
-    </a>
-    <a href="http://curso.alura.com.br/formacao-programacao" class="container__botao botao__secundario"> Assinar somente o Alura+</a>
-    <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outro planos</p>
-</div>
-</section>
+            <h1 class="titulo-principal">Com o combo+, você pode aproveiar a Alura+ por um preço único</h1>
+            <img src="img/Combo.png" alt="" class="container__imagem">
+            <a href="http://curso.alura.com.br/formacao-programacao" class="container__botao">
+                Assine por 10x de R$150
+            </a>
+            <a href="http://curso.alura.com.br/formacao-programacao" class="container__botao botao__secundario"> Assinar
+                somente o Alura+</a>
+            <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outro planos</p>
+        </div>
+    </section>
 </body>
+
 </html>
